infrastructure/controllers/longhorn-system.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
