infrastructure/controllers/metallb-system.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
