infrastructure/controllers/monitoring.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
