infrastructure/controllers/nginx-fabric.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-fabric
