infrastructure/controllers/longhorn.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  parentRefs:
    - name: http
      namespace: kgateway-system
  hostnames:
    - "longhorn.southcity.dev"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
