infrastructure/controllers/pocket-id.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pocket-id
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
  namespace: pocket-id
  labels:
    app: pocket-id
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pocket-id
  template:
    metadata:
      labels:
        app: pocket-id
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id:v2.3.0 # {"$imagepolicy": "pocket-id:pocket-id"}
          ports:
            - name: http
              containerPort: 1411
              protocol: TCP
            - name: http-metrics
              containerPort: 9464
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/data
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /healthz
              port: http
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pocket-id
---
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: pocket-id
  labels:
    app: pocket-id
spec:
  type: ClusterIP
  selector:
    app: pocket-id
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: http-metrics
      port: 9464
      targetPort: http-metrics
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  namespace: pocket-id
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: PocketID
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/description: Authentication IDP
    gethomepage.dev/icon: pocket-id.png
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
    - name: http
      namespace: kgateway-system
  hostnames:
    - "pocket-id.southcity.dev"
  rules:
    - backendRefs:
        - name: pocket-id
          port: 80
